카카오페이 결제 완료 후 이동 수정

--- a/lunch-back/src/main/resources/application.yml
+++ b/lunch-back/src/main/resources/application.yml
@@ -32,8 +32,8 @@ jwt:
 logging.level.web: DEBUG
 
 file:
-  local-filePath: test
-  local-fileUrl: test
+  filePath: test
+  fileUrl: test
 
 kakaopay:
   client_id: 495991519813E5C75502
