--- a/lunch-back/src/main/resources/application.yml
+++ b/lunch-back/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/lunch
     username: root
-    password: gosemvhs1!
+    password: Rlatkdrbs01!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
